Added Low-Power Self-Adaptation
Self-Adaptation scheme has been added. Certain features will be inacessible if battery level is below 20%.

--- a/leafpicrevived/src/main/res/layout/activity_settings.xml
+++ b/leafpicrevived/src/main/res/layout/activity_settings.xml
@@ -261,6 +261,16 @@
                         app:settingPreferenceKey="@string/preference_max_brightness"
                         app:settingTitle="@string/max_brightness"/>
 
+                    <!--Low Power Mode-->
+                    <com.alienpants.leafpicrevived2.views.SettingWithSwitchView
+                        android:id="@+id/option_low_power_mode"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:settingCaption="@string/low_power_mode_sub"
+                        app:settingIcon="gmd-settings-brightness"
+                        app:settingPreferenceKey="@string/preference_low_power_mode"
+                        app:settingTitle="@string/low_power_mode"/>
+
                     <!-- PICTURE ORIENTATION-->
                     <com.alienpants.leafpicrevived2.views.SettingWithSwitchView
                         android:id="@+id/option_picture_orientation"
