--- a/leafpicrevived/src/main/res/values/preferences-key.xml
+++ b/leafpicrevived/src/main/res/values/preferences-key.xml
@@ -8,6 +8,7 @@
     <string name="preference_delay_full_image">set_delay_full_image</string>
     <string name="preference_auto_rotate">set_picture_orientation</string>
     <string name="preference_max_brightness">set_max_luminosity</string>
+    <string name="preference_low_power_mode">set_low_power_mode</string>
     <string name="preference_disable_animations">disable_animations</string>
     <string name="preference_enable_timeline">enable_timeline</string>
 
